# ai-persona-arena

./: .env.example  .gitignore  ARCHITECTURE.md  LICENSE  README.md  README_ja.md  arena_bot.bat  pyproject.toml
adapters/: discord_bot.py  narration.py
examples/: mcp_client_demo.py  run_match.py  simple_player.py
protocol/: SESSION.md
src/arena/: __init__.py  client.py  engine.py  formatter.py  ogp.py  server.py
src/arena/games/: __init__.py  ragaman.py
src/arena/players/: __init__.py  base.py  cardman.py  inanna.py
tests/: test_ragaman.py
viewer/: index.html  sample_match.json
