[project]
name = "ai-persona-arena"
version = "0.1.0"
description = "Lightweight game engine for AI personality battles"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.84.0",
]

[project.optional-dependencies]
mcp = ["mcp>=1.20.0"]
discord = ["discord.py>=2.3"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24"]
